infrastructure/kubernetes/qa/templated/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ######NAMESPACE######worker
spec:
  replicas: 1
  selector:
    matchLabels:
      application: ######NAMESPACE######worker
  template:
    metadata:
      labels:
        application: ######NAMESPACE######worker
    spec:
      containers:
        - image: ######BACKEND_IMAGE######
          name: worker
          command: ['/bin/sh', '-c']
          args:
            - "php artisan queue:work"
          imagePullPolicy: Always
