infrastructure/kubernetes/qa/templated/php-fpm.yaml
apiVersion: v1
kind: Service
metadata:
  name: ######NAMESPACE######web
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"6001":"######NAMESPACE######websocket-backend-config"}}'
spec:
  ports:
    - port: 80
      name: ######NAMESPACE######web
      targetPort: 80
    - port: 6001
      name: ######NAMESPACE######websockets
      targetPort: 6001
  selector:
    application: ######NAMESPACE######web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ######NAMESPACE######web
spec:
  replicas: 1
  selector:
    matchLabels:
      application: ######NAMESPACE######web
  template:
    metadata:
      labels:
        application: ######NAMESPACE######web
    spec:
      containers:
        - image: ######BACKEND_IMAGE######
          name: php
          imagePullPolicy: Always
        - image: ######FRONTEND_IMAGE######
          name: nginx
          imagePullPolicy: Always
