infrastructure/kubernetes/qa/templated/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ######NAMESPACE######web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ######DOMAIN_NAME######
      http:
        paths:
          - backend:
              serviceName: ######NAMESPACE######web
              servicePort: 80
    - host: backstage.######DOMAIN_NAME######
      http:
        paths:
          - backend:
              serviceName: ######NAMESPACE######web
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ######NAMESPACE######websockets
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
    nginx.ingress.kubernetes.io/proxy-send-timeout: 3600
spec:
  rules:
    - host: ws.######DOMAIN_NAME######
      http:
        paths:
          - backend:
              serviceName: ######NAMESPACE######web
              servicePort: 6001
